# File: HISTORY.txt
#
14-Feb-2021 - V0.11 Created module with content migrated from rcsb.db
19-Feb-2021 - V0.12 Add IdCode exclusion filter to getLocatorObjList() add method getLocatorIdcodes()
15-Apr-2021 - V0.13 Add diagnostics for BIRD/Family/CC integration
16-Apr-2021 - V0.14 Report unreleased BIRD entries
 5-May-2021 - V0.15 Update dependencies
20-May-2021 - V0.16 Adding preliminary CurrentHoldings, UnreleasedHoldings and RemovedHoldings provider modules and tests
31-Jul-2021 - V0.17 Add scan for chemical component release date and update install scripts
 1-Aug-2021 - V0.18 Add support scanning and evaluating obsolete entries
26-Aug-2021 - V0.19 Update dependencies
21-Sep-2021 - V0.20 Add UpdateHoldingsProvider(), and discoveryMode option for local and remote repos in RespositoryProvider().
27-Sep-2021 - V0.21 Adjust URI paths in RespositoryProvider() and patch to compute missing BIRD annotations in the public archive
28-Sep-2021 - V0.22 Add a more specific test for validation report xml data in CurrentHoldingsProvider.hasValidationReportData()
29-Sep-2021 - V0.23 Make discoveryMode a configuration option rather than a constructor argument in RepositoryProvider() expose
                    inputIdCodeList as an argument for RepositoryProvider.getLocatorObjList()
29-Sep-2021 - V0.24 Make locator objects for URI targets tuples.
 8-Oct-2021 - V0.25 Pass configuration URLs to CurrentHoldingsProvider and RemoveHoldingsProvider
                    ValidationReportProvider() migrated to ValidationReportAdapter()